<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Ascent医药商务系统</string>
    <string name="action_settings">Settings</string>
    <string name="hello">Ascent医药商务系统移动版</string>
    <string name="login">用户登录</string>
    <string name="input_username">用户名：</string>
    <string name="input_userpwd">密码：</string>
    <string name="bt_login">登录</string>
    <string name="bt_exit">退出</string>
    <string name="products_tip">请选择商品</string>
    <string name="search">搜索</string>
    <string name="bt_apply">提交</string>
    <string name="name">姓名：</string>
    <string name="phone_number">电话：</string>
    <string name="email">邮箱：</string>
    <string name="addr">地址：</string>
    <string name="bt_confirm">确定</string>
    <string name="bt_cancel">取消</string>
    <string name="final_tip">订单提交成功，请您注意查收！</string>
    <string name="bt_return">返回</string>

</resources>
