<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/TextView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="" />

    <TextView
        android:id="@+id/TextView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/TextView"
        android:text="@string/login"
        android:textSize="30sp" >
    </TextView>

    <TextView
        android:id="@+id/TextView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/TextView1"
        android:layout_marginLeft="5dip"
        android:layout_marginTop="12sp"
        android:text="@string/input_username"
        android:textSize="20sp" >
    </TextView>

    <EditText
        android:id="@+id/username"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:layout_alignTop="@id/TextView2"
        android:layout_toRightOf="@id/TextView2"
        android:singleLine="true" >
    </EditText>

    <TextView
        android:id="@+id/TextView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/TextView2"
        android:layout_below="@id/username"
        android:text="@string/input_userpwd"
        android:textSize="20sp" >
    </TextView>

    <EditText
        android:id="@+id/password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/username"
        android:layout_alignTop="@id/TextView3"
        android:layout_toRightOf="@id/TextView3"
        android:inputType="textPassword"
        android:singleLine="true" >
    </EditText>

    <Button
        android:id="@+id/login"
        android:layout_width="100sp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/password"
        android:layout_below="@id/password"
        android:layout_marginTop="12sp"
        android:text="@string/bt_login"
        android:textSize="16sp" >
    </Button>

    <Button
        android:id="@+id/exit"
        android:layout_width="100sp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/login"
        android:layout_marginLeft="15sp"
        android:layout_toRightOf="@id/login"
        android:text="@string/bt_exit"
        android:textSize="16sp" >
    </Button>

</RelativeLayout>